--- a/app/package.json
+++ b/app/package.json
@@ -21,16 +21,23 @@
     "awilix": "^4.2.1",
     "aws-lambda": "^0.1.2",
     "aws-serverless-express": "^3.3.5",
+    "body-parser": "^1.18.3",
+    "cbor": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
+    "jsrsasign": "^8.0.12",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.10",
+    "spdy": "^4.0.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.21",
     "@types/aws-serverless-express": "^3.3.0",
     "@types/chai": "^4.1.7",
+    "@types/cors": "^2.8.8",
     "@types/cucumber": "^4.0.5",
     "@types/express": "^4.16.1",
     "@types/glob": "^7.1.1",
