--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "allowJs": true,
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
@@ -9,11 +10,12 @@
     "target": "es6",
     "lib": [
       "es6"
-    ]
+    ],
+    "outDir": "dist"
   },
   "include": [
-    "**/*.ts",
-    "*.ts",
+    "**/*.ts", 
+    "*.ts"
   ],
   "exclude": [
     "node_modules"
