add bdd for fido2 authentication

--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,12 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
+    "featurecpy": "find . -path ./dist -prune -false -o -name \"*.feature\" -exec cp --parent \"{}\" ./dist \\;",
     "start": "npm run build && nodemon local",
     "clean": "tsc --build --clean",
     "lint": "tslint -t stylish --project \"tsconfig.json\"",
-    "test": "npm run build && cucumber-js -f node_modules/cucumber-pretty --exit features/**/*.feature",
-    "e2e": "cucumber-js -f node_modules/cucumber-pretty --exit e2e/**/*.feature",
+    "test": "npm run build && npm run featurecpy && cucumber-js -f node_modules/cucumber-pretty --exit dist/features/**/*.feature",
+    "e2e": "cucumber-js -f node_modules/cucumber-pretty --exit dist/e2e/**/*.feature",
     "coverage": "nyc npm run test",
     "coverage:all": "nyc --all npm run test"
   },
