--- a/app/package.json
+++ b/app/package.json
@@ -13,12 +13,13 @@
     "start": "npm run build && nodemon local",
     "clean": "tsc --build --clean",
     "lint": "tslint -t stylish --project \"tsconfig.json\"",
-    "test": "npm run build && npm run featurecpy && cucumber-js -f node_modules/cucumber-pretty --exit dist/features/**/*.feature",
+    "test": "npm run build && npm run featurecpy && node ./node_modules/cucumber/bin/cucumber-js -f node_modules/cucumber-pretty --exit dist/features/**/*.feature",
     "e2e": "cucumber-js -f node_modules/cucumber-pretty --exit dist/e2e/**/*.feature",
     "coverage": "nyc npm run test",
     "coverage:all": "nyc --all npm run test"
   },
   "dependencies": {
+    "@webauthn/server": "^0.1.3",
     "awilix": "^4.2.1",
     "aws-lambda": "^0.1.2",
     "aws-serverless-express": "^3.3.5",
